# shadcnpy

./: README.md  pyproject.toml
shadcn/: __init__.py
